--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ buildscript {
         lib_gson = "com.google.code.gson:gson:2.7"
 
         lib_glide = "com.github.bumptech.glide:glide:3.5.0"
+
+        lib_cardview = "com.android.support:cardview-v7:$android_support_lib_version"
     }
 }
 
